fixed the splash images

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner" role="listbox">
+        <div class="carousel-inner indexCarousel" role="listbox">
             <div class="item active">
-                <img class="first-slide" src="images/53445969.jpg" alt="First slide">
+                <img class="first-slide indexImage" src="resizedSplashImages/globalPartnerships.jpg" alt="First slide">
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>LONG TERM GLOBAL PARTNERSHIPS</h1>
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="item">
-                <img class="second-slide" src="images/73510272.jpg" alt="Second slide">
+                <img class="second-slide indexImage" src="resizedSplashImages/technologyInnovation.jpg" alt="Second slide">
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>TECHNOLOGY & INNOVATION</h1>
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="item">
-                <img class="third-slide" src="images/60793587.jpg" alt="Third slide">
+                <img class="third-slide indexImage" src="resizedSplashImages/qualitySystems.jpg" alt="Third slide">
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>ISO &amp; QUALITY
