--- a/qualitySystems.html
+++ b/qualitySystems.html
@@ -42,7 +42,6 @@
     <div class="container myFont">
         <div class="row">
             <div class="col-sm-offset-1 col-sm-5">
-                <div class="col-sm-12">
                     <h2 id="experience" class="text-center">EXPERIENCE</h2>
                     <div>
                         DDNT has over 20 years’ experience working with public utilities
@@ -52,7 +51,7 @@
                         and management systems to ensure ongoing compliance.
                     </div>
                 </div>
-                <div class="col-sm-12">
+                <div class="col-sm-5">
                     <h2 id="mcritical" class="text-center">MISSION-CRITICAL</h2>
                     <div>
                         Our systems lie at the heart of day-to-day operations at some
@@ -61,10 +60,9 @@
                         performance and overall operational stability.
                     </div>
                 </div>
-
-
             </div>
-            <div class="col-sm-5">
+            <div class="row">
+            <div class="col-sm-5 col-sm-offset-1">
                 <br/>
                 <div class="blueBlock lead">
                     DDNT is an
@@ -86,6 +84,7 @@
                     improved compliance and audit reliability for our customers.
                 </div>
             </div>
+                </div>
         </div>
     </div>
 </div>
