--- a/strategyData.html
+++ b/strategyData.html
@@ -40,18 +40,18 @@
     <div class="container myFont">
         <div class="row">
             <div class="col-sm-offset-1 col-sm-5">
-                <div class="col-sm-12">
+
                     <h2 id="tda" class="text-center">TOPOLOGICAL DATA ANALYSIS</h2>
                     <div>
                         Conducting topological data analysis on large, distributed data
-                        sets – such as sensors on a production line, or populations of
+                        <br/>sets – such as sensors on a production line, or populations of
                         customers – finds useful information in places most analyses
                         cannot effectively look. More traditional analysis can then be
                         deployed to exactly compare the cost and benefit of potential
                         actions.
                     </div>
-                </div>
-                <div class="col-sm-12">
+               </div>
+                <div class="col-sm-5">
                     <h2 id="methodology" class="text-center">ADVANCED METHODOLOGY</h2>
                     <div>
                         DDNT leverages the most cutting–edge analytic methods
@@ -64,8 +64,8 @@
                 </div>
 
 
-            </div>
-            <div class="col-sm-5">
+            <div class="row">
+            <div class="col-sm-5 col-sm-offset-1">
                 <br/>
                 <div class="blueBlock lead">
                     Our strategy and
@@ -89,6 +89,7 @@
                     large, public M & A deals.
                 </div>
             </div>
+           </div>
         </div>
     </div>
 </div>
