croped the splash images

--- a/footer.html
+++ b/footer.html
@@ -13,13 +13,14 @@
                 <ul class="list-unstyled">
                 <li><a href="./strategyData.html">Strategy &amp; Data</a></li>
                 <li><a href="./technologyInovation.html">Technology &amp; Inovation</a></li>
+                <li><a href="./InnovativeSolutions.html">Innovative Solutions</a></li>
                 </ul>
             </div>
             <div class="col-sm-3">
                <div class="blueBlock">
                    <h3>Address</h3>
-                   <div>L1, 71 York Street
-                       [Sydney NSW 2000]</div>
+                   <div>L1, 71 York Street <br/>
+                       Sydney NSW 2000</div>
                </div>
             </div>
             <div class="col-sm-3 xs-top-buffer">
